2012年5月30日 杉本祐介 ・学生1人分のデータに対応するクラス(Studentクラス)を作成した ・学生データをCSVファイルに出力できるようにした ・CSVファイルから学生データを読み込めるようにした

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2012年5月30日 杉本祐介
+・学生1人分のデータに対応するクラス(Studentクラス)を作成した
+・学生データをCSVファイルに出力できるようにした
+・CSVファイルから学生データを読み込めるようにした
+
 2012年5月29日 杉本祐介
 ・バーコードリーダを使って学籍番号を読み取れるようにした
 ・NFCタグからIDを読み取れるようにした
