--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">StudentListMaker</string>
+    
+    <string name="menu_open">CSVファイルを開く</string>
+    <string name="menu_save">CSVファイルを保存する</string>
+    
+    <string name="error_make_directory_failed">保存用ディレクトリの作成に失敗しました</string>
 </resources>
