2012年5月30日 杉本祐介 ・学生1人分のデータを管理するクラス(Studentクラス)を作成した ・学生のリストを管理するクラス(StudentListクラス)を作成した ・1つのシートを管理するクラス(Sheetクラス)を作成した ・学生データをCSVファイルに出力できるようにした ・CSVファイルから学生データを読み込めるようにした ・読み取った学籍番号をもつ学生データが既に存在していた場合、   新たな追加を行わずにそのデータに対して編集を行うようにした ・連番をデータ数から計算して自動で振るようにした

--- a/history.txt
+++ b/history.txt
@@ -1,7 +1,12 @@
 2012年5月30日 杉本祐介
-・学生1人分のデータに対応するクラス(Studentクラス)を作成した
+・学生1人分のデータを管理するクラス(Studentクラス)を作成した
+・学生のリストを管理するクラス(StudentListクラス)を作成した
+・1つのシートを管理するクラス(Sheetクラス)を作成した
 ・学生データをCSVファイルに出力できるようにした
 ・CSVファイルから学生データを読み込めるようにした
+・読み取った学籍番号をもつ学生データが既に存在していた場合、
+  新たな追加を行わずにそのデータに対して編集を行うようにした
+・連番をデータ数から計算して自動で振るようにした
 
 2012年5月29日 杉本祐介
 ・バーコードリーダを使って学籍番号を読み取れるようにした
