2012年6月2日 杉本祐介 ・学生データの一覧を表示するようにした   これに伴い、StudentListAdapter.java、student_view.xmlを追加した。 ・科目名、授業時間を設定できるようにした   バーコードリーダをキーボードとして接続していると、ソフトウェアキーボードが表示されないため、   何かしら対策を講じる必要がある。 ・Studentクラスにいくつかの変更を加えた   変数名の変更、アクセッサメソッドの追加など。 ・Sheetクラスにアクセッサメソッドを追加した ・学籍番号の判定は保持バッファが6文字になったときのみ行うようにした ・データ追加時の重複チェックを追加メソッド内で行うようにした ・データ追加のタイミングを変更した ・必要な例外のみをcatchするようにした ・ストリームのcloseをfinallyブロックに移した ・return文の括弧を除去した

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,19 @@
+2012年6月2日 杉本祐介
+・学生データの一覧を表示するようにした
+  これに伴い、StudentListAdapter.java、student_view.xmlを追加した。
+・科目名、授業時間を設定できるようにした
+  バーコードリーダをキーボードとして接続していると、ソフトウェアキーボードが表示されないため、
+  何かしら対策を講じる必要がある。
+・Studentクラスにいくつかの変更を加えた
+  変数名の変更、アクセッサメソッドの追加など。
+・Sheetクラスにアクセッサメソッドを追加した
+・学籍番号の判定は保持バッファが6文字になったときのみ行うようにした
+・データ追加時の重複チェックを追加メソッド内で行うようにした
+・データ追加のタイミングを変更した
+・必要な例外のみをcatchするようにした
+・ストリームのcloseをfinallyブロックに移した
+・return文の括弧を除去した
+
 2012年5月30日 杉本祐介
 ・学生1人分のデータを管理するクラス(Studentクラス)を作成した
 ・1つのシートを管理するクラス(Sheetクラス)を作成した
