--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">StudentListMaker</string>
-    
+
+    <string name="menu_set_subject">科目名を設定する</string>
+    <string name="menu_set_time">授業時間を設定する</string>
     <string name="menu_open">CSVファイルを開く</string>
     <string name="menu_save">CSVファイルを保存する</string>
-    
+
+    <string name="dialog_set_subject_hint">科目名を入力</string>
+    <string name="dialog_set_time_hint">授業時間を入力</string>
+
     <string name="error_make_directory_failed">保存用ディレクトリの作成に失敗しました</string>
 </resources>
