2012年6月6日 杉本祐介 ・既に登録されている学籍番号が読み取られた場合、リスト上でそのデータを選択するようにした ・リストにヘッダを追加した ・リストに区切り線を追加した ・CSVファイルの展開/保存時にトーストを表示するようにした ・ファイル選択アクティビティを実装した ・展開するファイルを選択できるようにした ・Android SDKよりいくつか画像を追加した ・バーコードリーダの接続状況が変更された際にアクティビティの再生成が行われないようにした ・同じ学籍番号のデータが複数追加される不具合を修正した

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,14 @@
+2012年6月6日 杉本祐介
+・既に登録されている学籍番号が読み取られた場合、リスト上でそのデータを選択するようにした
+・リストにヘッダを追加した
+・リストに区切り線を追加した
+・CSVファイルの展開/保存時にトーストを表示するようにした
+・ファイル選択アクティビティを実装した
+・展開するファイルを選択できるようにした
+・Android SDKよりいくつか画像を追加した
+・バーコードリーダの接続状況が変更された際にアクティビティの再生成が行われないようにした
+・同じ学籍番号のデータが複数追加される不具合を修正した
+
 2012年6月2日 杉本祐介
 ・学生データの一覧を表示するようにした
   これに伴い、StudentListAdapter.java、student_view.xmlを追加した。
