2012年6月6日 杉本祐介 ・既に登録されている学籍番号が読み取られた場合、リスト上でそのデータを選択するようにした ・リストにヘッダを追加した ・リストに区切り線を追加した ・CSVファイルの展開/保存時にトーストを表示するようにした ・ファイル選択アクティビティを実装した ・展開するファイルを選択できるようにした ・Android SDKよりいくつか画像を追加した ・バーコードリーダの接続状況が変更された際にアクティビティの再生成が行われないようにした ・同じ学籍番号のデータが複数追加される不具合を修正した

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="file_choose_title">ファイルを選択する</string>
     <string name="file_choose_icon">ファイルアイコン</string>
-    <string name="file_choose_parent">[上のフォルダへ]</string>
+    <string name="file_choose_parent">[上のディレクトリへ]</string>
 
     <string name="header_student_num">連番</string>
     <string name="header_student_no">学籍番号</string>
