--- a/history.txt
+++ b/history.txt
@@ -10,7 +10,7 @@
 ・同じ学籍番号のデータが複数追加される不具合を修正した
 
 2012年6月2日 杉本祐介
-・学生データの一覧を表示するようにした
+・学生データの一覧を表示できるようにした
   これに伴い、StudentListAdapter.java、student_view.xmlを追加した。
 ・科目名、授業時間を設定できるようにした
   バーコードリーダをキーボードとして接続していると、ソフトウェアキーボードが表示されないため、
