2012年6月11日 杉本祐介 ・ファイル選択アクティビティにおいて、ソートを行うようにした ・ファイル選択アクティビティにおいて、隠しファイルの表示非表示を選択できるようにした ・ファイル選択アクティビティにおいて、拡張子を別に指定できるようにした ・拡張子が1つだけ指定されていた場合、新規ファイル作成時に自動で付加するようにした ・科目名と授業時間を1つのダイアログで設定できるようにした

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2012年6月11日 杉本祐介
+・ファイル選択アクティビティにおいて、ソートを行うようにした
+・ファイル選択アクティビティにおいて、隠しファイルの表示非表示を選択できるようにした
+・ファイル選択アクティビティにおいて、拡張子を別に指定できるようにした
+・拡張子が1つだけ指定されていた場合、新規ファイル作成時に自動で付加するようにした
+・科目名と授業時間を1つのダイアログで設定できるようにした
+
 2012年6月9日 杉本祐介
 ・新規シート作成機能を実装した
 ・新規ファイル作成機能を実装した
