--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,14 +12,19 @@
     <string name="header_student_num_of_nfc_id">数</string>
 
     <string name="menu_new_sheet">新規シート</string>
-    <string name="menu_set_subject">科目名を設定する</string>
-    <string name="menu_set_time">授業時間を設定する</string>
+    <string name="menu_edit_info">講義情報を編集する</string>
     <string name="menu_open">CSVファイルを開く</string>
     <string name="menu_save">CSVファイルを保存する</string>
+    <string name="menu_show_invisible_file">隠しファイルを表示する</string>
+    <string name="menu_hide_invisible_file">隠しファイルを隠す</string>
     <string name="menu_new_file">新規ファイルを作成する</string>
 
-    <string name="dialog_set_subject_hint">科目名を入力</string>
-    <string name="dialog_set_time_hint">授業時間を入力</string>
+    <string name="dialog_ask">確認</string>
+    <string name="dialog_ask_overwrite">に上書きしてもよろしいですか?</string>
+    <string name="dialog_edit_subject_label">科目名:</string>
+    <string name="dialog_edit_subject_hint">科目名を入力</string>
+    <string name="dialog_edit_time_label">授業時間:</string>
+    <string name="dialog_edit_time_hint">授業時間を入力</string>
     <string name="dialog_new_file_hint">ファイル名を入力</string>
 
     <string name="notice_new_sheet_created">新規シートを作成しました</string>
@@ -28,6 +33,7 @@
 
     <string name="error">エラー</string>
     <string name="error_make_directory_failed">保存用ディレクトリの作成に失敗しました</string>
+    <string name="error_saving_failed">保存に失敗しました</string>
     <string name="error_file_already_exists">既に同名のファイルが存在します。</string>
     <string name="error_file_create_failed">ファイルの作成に失敗しました。</string>
     <string name="error_illegal_file_name">ファイル名に使用できない文字が含まれています。</string>
