2012年6月12日 杉本祐介 ・ファイル作成時にトーストを表示するようにした

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2012年6月12日 杉本祐介
+・ファイル作成時にトーストを表示するようにした
+
 2012年6月11日 杉本祐介
 ・ファイル選択アクティビティにおいて、ソートを行うようにした
 ・ファイル選択アクティビティにおいて、隠しファイルの表示非表示を選択できるようにした
