2012年6月27日 杉本祐介 ・初期アクティビティをStudentAttendanceActivityに変更した ・編集内容が破棄される際に保存されていなければ確認するようにした ・出席管理機能を実装した ・初期ディレクトリを変更した ・パッケージ名を変更した

--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,9 @@
 2012年6月27日 杉本祐介
-・パッケージ名を変更した
 ・初期アクティビティをStudentAttendanceActivityに変更した
+・編集内容が破棄される際に保存されていなければ確認するようにした
+・出席管理機能を実装した
+・初期ディレクトリを変更した
+・パッケージ名を変更した
 
 2012年6月20日 杉本祐介
 ・パッケージ名を変更した
