2012年7月2日 杉本祐介 ・設定画面を追加した ・設定内容を管理するクラスを追加した

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2012年7月2日 杉本祐介
+・設定画面を追加した
+・設定内容を管理するクラスを追加した
+
 2012年6月27日 杉本祐介
 ・初期アクティビティをStudentAttendanceActivityに変更した
 ・編集内容が破棄される際に保存されていなければ確認するようにした
