2012年7月3日 杉本祐介 ・出席データに位置情報を付加できるようにした ・同じNFCタグを複数の学生に登録できないようにした ・CSVファイルに出力する際に、値をダブルクォーテーション("")で囲むようにした

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2012年7月3日 杉本祐介
+・出席データに位置情報を付加できるようにした
+・同じNFCタグを複数の学生に登録できないようにした
+・CSVファイルに出力する際に、値をダブルクォーテーション("")で囲むようにした
+
 2012年7月2日 杉本祐介
 ・設定画面を追加した
 ・設定内容を管理するクラスを追加した
