--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2012年7月10日 杉本祐介
+・FileChooseActivityにフォルダ選択機能を追加した
+・FileChooseActivityにキャンセルボタンを追加した
+・出席データの保存先を設定できるようにした
+・出席データの保存名を設定できるようにした
+・位置情報の更新間隔を設定できるようにした
+
 2012年7月4日 杉本祐介
 ・リスト作成画面に入る際にダイアログで確認するようにした
 ・PreferenceUtilityクラスの名前をPreferenceUtilに変更した
