2012年7月11日 杉本祐介 ・位置情報の取得方法を設定できるようにした ・位置情報の出力フォーマットを設定できるようにした ・CSVの読み込み/書き込みにOpenCSVを使用するようにした ・Apache Licenseを表示できるようにした ・PreferenceUtilの各メソッドをスタティックメソッドから通常のメソッドに変更した ・アプリをSDカードに移動できるようにした ・リスト表示時、連番が-1である場合は連番の値を表示しないようにした ・学生データの編集時、連番を空にすると強制終了する不具合を修正した

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,13 @@
+2012年7月11日 杉本祐介
+・位置情報の取得方法を設定できるようにした
+・位置情報の出力フォーマットを設定できるようにした
+・CSVの読み込み/書き込みにOpenCSVを使用するようにした
+・Apache Licenseを表示できるようにした
+・PreferenceUtilの各メソッドをスタティックメソッドから通常のメソッドに変更した
+・アプリをSDカードに移動できるようにした
+・リスト表示時、連番が-1である場合は連番の値を表示しないようにした
+・学生データの編集時、連番を空にすると強制終了する不具合を修正した
+
 2012年7月10日 杉本祐介
 ・FileChooseActivityにフォルダ選択機能を追加した
 ・FileChooseActivityにキャンセルボタンを追加した
