--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,12 +18,32 @@
 
     <string name="setting_title">設定画面</string>
     <string name="setting_general_title">一般設定</string>
+    <string name="setting_location_title">位置情報設定</string>
     <string name="setting_add_location_title">位置情報を付加する</string>
     <string name="setting_add_location_summary">出席データに位置情報を付加します。</string>
+    <string name="setting_location_provider_title">位置情報の取得方法</string>
+    <string name="setting_location_provider_network">ネットワーク</string>
+    <string name="setting_location_provider_gps">GPS</string>
     <string name="setting_location_interval_title">位置情報の更新間隔</string>
+    <string name="setting_location_format_title">位置情報の出力フォーマット</string>
+    <string name="setting_location_format_output_null">出力なし</string>
+    <string name="setting_location_format_latitude_title">緯度</string>
+    <string name="setting_location_format_latitude_summary">緯度を出力します。</string>
+    <string name="setting_location_format_longitude_title">経度</string>
+    <string name="setting_location_format_longitude_summary">経度を出力します。</string>
+    <string name="setting_location_format_altitude_title">高度</string>
+    <string name="setting_location_format_altitude_summary">高度を出力します。</string>
+    <string name="setting_location_format_accuracy_title">精度</string>
+    <string name="setting_location_format_accuracy_summary">精度を出力します。</string>
+    <string name="setting_save_title">保存設定</string>
     <string name="setting_change_attendance_dir_title">出席データの保存先を変更</string>
     <string name="setting_change_attendance_name_title">出席データの保存名を変更</string>
-    <string name="setting_change_attendance_name_message">以下の変数を利用可能です。\n%S : 科目名, %t : 授業時間\n%y : 年, %M : 月, %d : 日\n%h : 時, %m : 分, %s : 秒</string>
+    <string name="setting_change_attendance_name_message">以下の変数が利用可能です。\n%S : 科目名, %t : 授業時間\n%y : 年, %M : 月, %d : 日\n%h : 時, %m : 分, %s : 秒\n拡張子は自動で付加されます。</string>
+    <string name="setting_other_title">その他</string>
+    <string name="setting_license_title">ライセンス表記</string>
+    <string name="setting_license_summary">このアプリに使用されている各ライセンスを表示することができます。</string>
+    <string name="setting_license_apache_title">Apache License</string>
+    <string name="setting_license_apache_summary">Apache Licenseを表示します。</string>
 
     <string name="header_student_num">連番</string>
     <string name="header_student_no">学籍番号</string>
@@ -96,4 +116,6 @@
     <string name="error_file_name_null">ファイル名が入力されていません。</string>
 
     <string name="alphabet_and_number">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
+    <string name="zero">0</string>
+    <string name="one">1</string>
 </resources>
