2012年7月18日 杉本祐介 ・GPSで測位を行う際、端末でGPSが無効になっている場合はその旨を表示するようにした
2012年7月17日 杉本祐介
・新規フォルダ作成機能を追加した

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2012年7月18日 杉本祐介
+・GPSで測位を行う際、端末でGPSが無効になっている場合はその旨を表示するようにした
+
+2012年7月17日 杉本祐介
+・新規フォルダ作成機能を追加した
+
 2012年7月11日 杉本祐介
 ・位置情報の取得方法を設定できるようにした
 ・位置情報の出力フォーマットを設定できるようにした
