2012年8月12日 杉本祐介 ・画面の回転に仮対応した
2012年8月9日 杉本祐介
・災害モードの設定項目を追加した
  設定内容に応じて、表示するアクティビティを切り替えるようになっている。

2012年8月8日 杉本祐介
・Webサーバ機能を統合した

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,13 @@
+2012年8月12日 杉本祐介
+・画面の回転に仮対応した
+
+2012年8月9日 杉本祐介
+・災害モードの設定項目を追加した
+  設定内容に応じて、表示するアクティビティを切り替えるようになっている。
+
+2012年8月8日 杉本祐介
+・Webサーバ機能を統合した
+
 2012年7月18日 杉本祐介
 ・GPSで測位を行う際、端末でGPSが無効になっている場合はその旨を表示するようにした
 
