--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="attendance_read_start_label">読み取り開始</string>
     <string name="attendance_read_finish_label">読み取り終了</string>
 
+    <string name="disaster_title">災害モード</string>
+
     <string name="listmaker_title">リスト作成画面</string>
 
     <string name="file_choose_title">ファイル選択画面</string>
@@ -39,6 +41,10 @@
     <string name="setting_change_attendance_dir_title">出席データの保存先</string>
     <string name="setting_change_attendance_name_title">出席データの保存名</string>
     <string name="setting_change_attendance_name_message">以下の変数が利用可能です。\n%S : 科目名, %t : 授業時間\n%y : 年, %M : 月, %d : 日\n%h : 時, %m : 分, %s : 秒\n拡張子は自動で付加されます。</string>
+    <string name="setting_disaster_title">災害設定</string>
+    <string name="setting_disaster_mode_title">災害モードを有効にする</string>
+    <string name="setting_disaster_mode_summary">災害モードを有効にします。</string>
+    <string name="setting_ip_address_title">IPアドレス</string>
     <string name="setting_other_title">その他</string>
     <string name="setting_license_title">ライセンス表記</string>
     <string name="setting_license_summary">このアプリに使用されている各ライセンスを表示することができます。</string>
