2012年8月14日 杉本祐介 ・フォルダを種類分けした ・特定のフォルダ直下のサーブレットクラス(.dex)を動的に読み込むようにした

--- a/history.txt
+++ b/history.txt
@@ -1,9 +1,14 @@
+2012年8月14日 杉本祐介
+・フォルダを種類分けした
+・特定のフォルダ直下のサーブレットクラス(.dex)を動的に読み込むようにした
+
 2012年8月13日 杉本祐介
 ・画面の回転に本対応した
 ・リストのアイテムを選択した際の挙動を修正した
 
 2012年8月12日 杉本祐介
 ・画面の回転に仮対応した
+・学生/出席データ関係のクラスの位置を変更した
 
 2012年8月9日 杉本祐介
 ・災害モードの設定項目を追加した
