--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -115,7 +115,9 @@
     <string name="notice_file_created">を作成しました</string>
 
     <string name="error">エラー</string>
-    <string name="error_make_directory_failed">保存用フォルダの作成に失敗しました</string>
+    <string name="error_make_list_directory_failed">リストフォルダの作成に失敗しました</string>
+    <string name="error_make_save_directory_failed">保存フォルダの作成に失敗しました</string>
+    <string name="error_make_servlet_directory_failed">サーブレットフォルダの作成に失敗しました</string>
     <string name="error_student_already_readed">既に出席確認済みの学生です</string>
     <string name="error_nfc_id_already_registered">既に他の学生に登録されているNFCタグです</string>
     <string name="error_opening_failed">を開けませんでした</string>
