2012年8月15日 杉本祐介 ・災害モード時、リストフォルダ直下のCSVファイル全てから学生データの照合を行うようにした ・災害モード時、出席データをLAN経由で公開するようにした ・動作しないためサーブレットの動的読み込みを一時撤回した

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2012年8月15日 杉本祐介
+・災害モード時、リストフォルダ直下のCSVファイル全てから学生データの照合を行うようにした
+・災害モード時、出席データをLAN経由で公開するようにした
+・動作しないためサーブレットの動的読み込みを一時撤回した
+
 2012年8月14日 杉本祐介
 ・フォルダを種類分けした
 ・特定のフォルダ直下のサーブレットクラス(.dex)を動的に読み込むようにした
