--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2012年8月17日 杉本祐介
+・空の状態で出席データを出力できる不具合を修正した
+・災害モード時、同じ学生がリストに追加されてしまう不具合を修正した
+
 2012年8月15日 杉本祐介
 ・災害モード時、リストフォルダ直下のCSVファイル全てから学生データの照合を行うようにした
 ・災害モード時、出席データをLAN経由で公開するようにした
