2012年8月22日 杉本祐介 ・災害モード時のサーブレットの仕様を変更した
2012年8月21日 杉本祐介
・動画撮影機能を追加した
・カメラの設定画面を追加した
・switch文の書き方を変更した

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
+2012年8月21日 杉本祐介
+・動画撮影機能を追加した
+・カメラの設定画面を追加した
+・switch文の書き方を変更した
+
 2012年8月17日 杉本祐介
+・写真撮影機能を追加した
 ・空の状態で出席データを出力できる不具合を修正した
 ・災害モード時、同じ学生がリストに追加されてしまう不具合を修正した
 
