2012年8月23日 杉本祐介 ・Galaxy Nexus向けのコードを追加した ・スプラッシュ画面を追加した ・アイコンを変更した

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2012年8月23日 杉本祐介
+・Galaxy Nexus向けのコードを追加した
+・スプラッシュ画面を追加した
+・アイコンを変更した
+
+2012年8月22日 杉本祐介
+・災害モード時のサーブレットの仕様を変更した
+
 2012年8月21日 杉本祐介
 ・動画撮影機能を追加した
 ・カメラの設定画面を追加した
